# C_baisc_study

./: CMakeLists.txt  Define.c  MainFuncArgs.c  avg.c  avg.out  hello.c  input.c  input.out  main.c
array_pointer/: main.c
const/: main.c
doublePointer/: main.c
funcPointer/: main.c
multFiles/: a.out  main.c
multFiles/includes/: a.c  a.h  hello.c  hello.h
pointer/: main.c  pointer_array.c  pointer_test.c
review/: main.c
string/: main.c
